add buttons and styling for follow and cnotact

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -26,3 +26,57 @@ $padding-top: 30px;
 //* Buttons
 $button-font-size: 17px;
 $button-padding: 15px;
+
+.button-green {
+  font-size: $button-font-size;
+  // display: inline-block; // LOOK HERE
+  color: white;
+  background-color: $ayoosteogreen;
+  padding: 15px;
+  border: 2px solid white;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+
+  i {
+    color: white;
+    padding-right: 10px;
+  }
+}
+
+.button-green-div:hover {
+  a {
+    background-color: white;
+    color: $ayoosteogreen;
+    border: 2px solid $ayoosteogreen;
+  }
+  i {
+    color: $ayoosteogreen;
+  }
+}
+
+.button-green-inverted {
+  font-size: $button-font-size;
+  color: $ayoosteogreen;
+  background-color: white;
+  padding: 15px;
+  border: 2px solid $ayoosteogreen;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  i {
+    color: white;
+    padding-right: 10px;
+  }
+}
+
+.button-green-inverted-div:hover {
+  a {
+    background-color: $ayoosteogreen;
+    color: white;
+    border: 2px solid $ayoosteogreen;
+  }
+  i {
+    color: $ayoosteogreen;
+  }
+}
