add enhanced imaging

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -91,6 +91,7 @@ $button-padding: 15px;
   align-items: center;
   justify-content: center;
   img {
+    height: auto;
     padding-left: $padding-left;
     padding-right: $padding-right;
     padding-bottom: $padding-bottom;
