--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -90,6 +90,7 @@ $button-padding: 15px;
     img {
       width: 100%;
       padding-bottom: $padding-bottom;
+      height: auto;
     }
   }
   #dse1 {
