update home page

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,7 +1,10 @@
 //* Color Palette
 $ayoosteogreen: rgb(0, 105, 69);
-$ayoosteoblue: rgb(0, 135, 167);
-$navcolor: rgb(255, 255, 255);
+$ayoosteogreen2: rgb(127, 146, 90);
+$ayoosteoblue: rgb(0, 137, 168);
+$ayoosteoblue2: rgb(117, 144, 170);
+$ayoosteoblue3: rgb(31, 29, 51);
+$navcolor: #ffffff;
 
 //* Font sizes
 $title: 50px;
