--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,11 @@ body {
   @media (max-width: 500px) {
     padding-top: 100px;
   }
+  p{
+    text-align: justify;
+    text-justify: inter-word;
+    hyphens: auto;
+  }
 }
 
 html {
