--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -64,6 +64,9 @@ $button-padding: 15px;
       text-justify: inter-word;
       @media (max-width: 450px) {
         text-align: start;
+        text-align: justify;
+        text-justify: inter-word;
+        hyphens: auto;
       }
     }
     strong {
@@ -75,7 +78,7 @@ $button-padding: 15px;
     ul {
       list-style-position: outside;
       padding-left: $padding-left;
-      padding-bottom: 30px;
+      padding-bottom: 15px;
       li {
         font-size: $text-regular;
         max-width: $paragraph;
