add blogs and minor changes

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -97,3 +97,12 @@ $button-padding: 15px;
     padding-bottom: $padding-bottom;
   }
 }
+
+.blog-intro-image {
+  max-width: 600px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  height: auto;
+  width: 100%;
+}
